--- a/src/widget/widget.template.html
+++ b/src/widget/widget.template.html
@@ -1,3 +1,3 @@
 <div class="opendash-widget-live-chart">
-  <highchart id="highchart-live-chart" config="$ctrl.hcData" style="height:100%;"></highchart>
+  <highchart id="highchart-live-chart" ng-if="$ctrl.hcData" config="$ctrl.hcData" style="height:100%;"></highchart>
 </div>
